# grooveforge

./: CMakeLists.txt  COPYRIGHT  README.md  go
src/: main.cpp
src/app/: GrooveController.cpp  GrooveController.h
src/audio/: JackEngine.cpp  JackEngine.h
src/core/: GrooveTypes.h
src/dsp/: BassVoice.cpp  BassVoice.h  DrumVoice.cpp  DrumVoice.h  InternalVoice.cpp  InternalVoice.h
src/export/: OfflineRenderer.cpp  OfflineRenderer.h
src/generation/: PatternGenerator.cpp  PatternGenerator.h
src/recording/: AudioRecorder.cpp  AudioRecorder.h
src/sample/: SampleBuffer.cpp  SampleBuffer.h  SampleVoice.cpp  SampleVoice.h
src/sf2/: SoundFontSynth.cpp  SoundFontSynth.h
src/ui/: MainWindow.cpp  MainWindow.h
tests/: PatternGeneratorTests.cpp
